Reuse styling for links

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -33,7 +33,7 @@
       {{ content | safe }}
     </main>
 
-    <footer class="mb-8 text-slate-400">
+    <footer class="mb-8 p-4 text-slate-400">
       <p>&copy; {{ metadata.author.name }}</p>
     </footer>
 
