--- a/content/about/index.njk
+++ b/content/about/index.njk
@@ -19,7 +19,7 @@ Software Engineer &amp; Product Owner at Dynatrace, developing Kubernetes Operat
         <span>
           {{ experience.title }}
           at
-          <a href="{{ experience.company.url }}" class="underline hover:decoration-pink-500">
+          <a href="{{ experience.company.url }}" class="url">
             {{ experience.company.name }}
           </a>
         </span>
