--- a/content/archive/index.njk
+++ b/content/archive/index.njk
@@ -15,7 +15,7 @@ eleventyNavigation:
       <span>{{ talk.title }}</span>
       </br>
       <span class="italic">
-        <a href="{{talk.link}}" class="underline">
+        <a href="{{talk.link}}" class="url">
           {{ talk.event }}
         </a>
         on {{ talk.date | readableDate }}
