--- a/tailwind.css
+++ b/tailwind.css
@@ -632,6 +632,10 @@ video {
   max-width: 42rem;
 }
 
+.flex-none {
+  flex: none;
+}
+
 .grow {
   flex-grow: 1;
 }
@@ -680,6 +684,10 @@ video {
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border {
