--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -8,6 +8,8 @@
 
     <link rel="canonical" href="{{ metadata.url }}{{ page.url }}">
     <link rel="stylesheet" href="{{ '/styles.css' | url }}">
+    <link rel="icon"
+      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⛰️</text></svg>" />
 
     <meta name="generator" content="{{ eleventy.generator }}">
   </head>
