--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,7 +3,7 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import { AUTHOR, SITE_DESCRIPTION } from '../consts';
 
 interface Props {
 	title?: string | undefined;
@@ -11,7 +11,7 @@ interface Props {
 }
 const { title, description = SITE_DESCRIPTION } = Astro.props;
 
-const actualTitle = title ? `${title} | ${SITE_TITLE}` : SITE_TITLE;
+const actualTitle = title ? `${title} | ${AUTHOR}` : AUTHOR;
 ---
 
 <!doctype html>
